--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           </div>
         </div>
     
-      </div>
+      <!-- </div> -->
     
         <!-- Machine Learning and Data Analysis side by side -->
         <div class="skills-container">
@@ -465,14 +465,24 @@
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <div style="display: flex; justify-content: space-between;">
+                <h4>Research Assistant</h4>
+                <h5 style="color: black; font-size: 80%;">Feb 2022 - Jul 2023</h5>
+              </div>
+              <p><em>CIBER Lab, University of Colorado, Boulder </em></p>
+              <ul>
+                <li>Analysing human behavior to understand perceptions of flood risks in the United States and employing statistical and machine learning techniques to identify patterns in the data.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <div style="display: flex; justify-content: space-between;">
                 <h4>Machine Learning Engineer</h4>
                 <h5 style="color: black; font-size: 80%;">Feb 2022 - Jul 2023</h5>
               </div>
               <p><em>Multicoreware Inc, Chennai, India </em></p>
               <ul>
-                <li>Assisted in the development of a cutting-edge multi-object tracking algorithm with TensorFlow achieving an impressive MOTA score of 78% in tracking moving pedestrians.</li>
-                <li>Conducted quantization and pruning experiments to ensure optimal performance of heavy object tracking models on the GrAI VIP chip resulting in a remarkable 50% reduction in training time, showcasing proficiency in optimization techniques</li>
-                <li>Led the seamless migration of code to various ML frameworks for object detection and tracking models, including YOLO and FairMOT, demonstrating adept project management and technical skills.</li>
+                <li>Developed a multi-object tracking algorithm using YOLOv6 and TensorFlow for CCTV cameras achieving a 78% MOTA score in tracking moving pedestrians.</li>
+                <li>Conducted quantization and pruning experiments on heavy object tracking models to fit into the GrAI chip, resulting in a 20% reduction in training time.</li>
+                <li>Led the seamless migration of object detection and tracking models from PyTorch to TensorFlow, including YOLO-v6, MobileNet-v2 and FairMOT.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -482,8 +492,8 @@
               </div>
               <p><em>Multicoreware Inc, Chennai, India</em></p>
               <ul>
-                <li>Engineered a minimum viable product featuring an object detection model for precise identification of vehicles and pedestrians, utilizing radar point cloud data with a 10% reduction in GPU processing power.</li>
-                <li>Minimised manual workload by 30% by developing a visualization tool incorporating advanced clustering techniques like DBSCAN to effectively present the model’s point cloud results to stakeholders.</li>
+                <li>Engineered a minimum viable product for detecting vehicles and pedestrians using radar point cloud data.</li>
+                <li>Built a visualization tool incorporating DBSCAN to present the model's point cloud results to stakeholders.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -492,10 +502,9 @@
                 <h5 style="color: black; font-size: 80%;">Aug 2021 - Feb 2022</h5>
               </div>
               <p><em>Madras Scientific Research Foundation, Chennai, India</em></p>
-              <ul>
-                <li>Awarded one of only 5 coveted Research Internship positions nationally from a pool of 800 applicants. Performed qualitative and quantitative research focused on detecting defects in additive manufacturing.</li>
-                <li>Applied a variety of data augmentation techniques to generate a comprehensive 5000-image dataset encompassing both defective and pristine 3D prints, showcasing proficiency in data augmentation.</li>
-                <li>Developed an object classification model for anomaly detection using transfer learning architecture to detect defects on 3D printed products achieving an accuracy of 89%.</li>
+              <ul>            
+                <li>Awarded one of only 5 coveted Research Internship positions nationally from a pool of 800 applicants. Performed research focused on detecting defects in additive manufacturing.</li>
+                <li>Developed an object classification model using transfer learning to detect defects in 3D printed products, achieving 89% accuracy.</li>
               </ul>
             </div>
           </div>
